--- a/countdown.css
+++ b/countdown.css
@@ -6,21 +6,26 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 20vw;
     font-family: 'Lato', sans-serif;    
-    color: rgb(0, 0, 0);
-
+    background-color: rgb(172, 216, 255);
+    color: white;
 }
 
-#display {
-    background-color: rgb(0, 136, 255);
+h1 {
+    font-size: 7vw;
+}
+
+#display {    
+    font-size: 20vw;
+    background-color: rgb(172, 216, 255);
+    box-shadow: black;
     border-radius: 5vw;
     display: flex;
     flex-direction: column;
 }
 
 #date {
-    background-color: rgb(185, 255, 255);
+    background-color: rgb(0, 124, 124);
     border-radius: 3vw;
     margin: auto;
     margin-bottom: 2vh;
