--- a/countdown.css
+++ b/countdown.css
@@ -17,7 +17,7 @@ h1 {
 
 #display {    
     font-size: 20vw;
-    background-color: rgb(172, 216, 255);
+    background-color: rgb(172, 216, 255, 0);
     box-shadow: black;
     border-radius: 5vw;
     display: flex;
@@ -36,4 +36,14 @@ h1 {
     background-color: rgb(0, 100, 100);
     border-radius: 3vw;
     margin: auto;
+}
+
+#bar {
+    margin-left: 0;
+    height: 15vh;
+    z-index: -1;
+    position: fixed;
+    left: 0px;
+    top: 80vh;
+    background-color: black;
 }
